# ComfyUI_ParlerTTS

./: .gitignore  Makefile  README.md  __init__.py  example.json  parlerTTS (1).json  parlerTTS.json  parler_tts_node.py  pyproject.toml  requirements.txt  setup.py
dac/nn/: layers.py  quantize.py
dac/utils/: __init__.py
helpers/model_init_scripts/: init_dummy_model_with_encodec.py  init_model_600M.py
helpers/push_to_hub_scripts/: push_trained_parler_tts_to_hub.py
helpers/training_configs/: starting_point_0.01.json
parler_tts/: configuration_parler_tts.py  modeling_parler_tts.py  streamer.py
parler_tts/dac_wrapper/: modeling_dac.py
training/: run_parler_tts_training.py
