[project]
name = "comfyui_parlertts"
description = "Parler-TTS is a lightweight text-to-speech (TTS) model that can generate high-quality, natural sounding speech in the style of a given speaker (gender, pitch, speaking style, etc)"
version = "1.1.0"
license = "LICENSE"
dependencies = ["transformers>=4.43.0", "#torch", "#sentencepiece", "#descript-audio-codec", "#black~=23.1", "#isort>=5.5.4", "#ruff>=0.0.241,<=0.0.259"]

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_ParlerTTS"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "smthemex"
DisplayName = "ComfyUI_ParlerTTS"
Icon = ""
